# ThermalApp

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mylog.h  native-lib.cpp  utilbase.h
app/src/main/cpp/libusb/: CMakeLists.txt
app/src/main/cpp/libusb/libusb/: config.h  core.c  io.c
app/src/main/cpp/libusb/libusb/os/: android_usbfs.c  android_usbfs.h
app/src/main/cpp/libuvc/: CMakeLists.txt
app/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_config.h.in  libuvc_internal.h
app/src/main/cpp/libuvc/src/: ctrl-add.c  ctrl-gen.c  device.c  example.c  init.c
app/src/main/java/com/example/thermalapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
